Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6294779/T6294779c.out
T6294779c.java:29:5: compiler.err.types.incompatible: T6294779c.I2, T6294779c.I1, (compiler.misc.incompatible.diff.ret: get, )
1 error
